# fdf

./: .gitignore  CMakeLists.txt  Makefile  altitude.c  author  calculation.c  draw_grid.c  fdf.c  fdf.h  hook_deal_key.c  info.c  initialization.c  input_map.c  main.c  move.c  project.c  put_line.c  put_map_point_fd.c  scale.c  subjects.txt  validation.c
get_next_line/: get_next_line.c  get_next_line.h
libft/: Makefile  ft_atoi_base.c  ft_degtorad.c  ft_map_void.c  ft_map_void_del.c  ft_pow.c  ft_radtodeg.c  ft_str_rejoin.c  libft.h
maps/: 20-60.fdf  42_inv_01.fdf
resources/: test_main.c
